--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -124,7 +124,7 @@ body {
     opacity: .8;
 }
 
-.Donate {
+.ree {
     font-family: 'Zen Maru Gothic', sans-serif;
     margin: 5px 0;
     text-align: center;
