--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -125,7 +125,7 @@ body {
     opacity: .8;
 }
 
-.kp {
+.ree {
     font-family: 'Zen Maru Gothic', sans-serif;
     margin: 5px 0;
     text-align: center;
