--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -132,6 +132,13 @@ body {
     letter-spacing: 2px;
 }
 
+.ree_spam {
+    font-family: 'Zen Maru Gothic', sans-serif;
+    margin: 5px 0;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
 .icon-container {
     padding: 15px;
 }
