--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -314,3 +314,17 @@ textarea {
 .btn:hover {
   background-color: #333;
 }
+
+.contact-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #212121;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.contact-link:hover {
+  background-color: #333;
+}
