--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -318,13 +318,14 @@ textarea {
 .contact-link {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #212121;
-  color: #fff;
+  background-color: #fff;
+  color: #212121;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.2s ease-in-out;
 }
 
 .contact-link:hover {
-  background-color: #333;
+  background-color: #212121;
+  color: #fff;
 }
