--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -233,3 +233,99 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
+    background: #1DB954;
+    font-weight: 500;
+    color: var(--font-color);
+    filter: opacity(0.8);
+    animation: from-bottom ease-out .4s;
+}
+@keyframes from-bottom {
+    0% {
+        transform: translateY(100%);
+        opacity: .5;
+    }
+}
+
+.listening p .title, .listening p .artist {
+    font-weight: 600;
+}
+
+.listening .listening-container {
+    display: flex;
+    column-gap: 8px;
+    align-items: center;
+    padding: 0 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  /* CSS styles for screens smaller than 600px */
+  .name {
+    font-size: 24px;
+  }
+  .about {
+    font-size: 16px;
+  }
+  .socials {
+    flex-direction: column;
+  }
+}
+
+
+/* Style for the form fields */
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  font-size: 16px;
+}
+
+textarea {
+  height: 150px;
+}
+
+/* Style for the send message button */
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: var(--font-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color .2s;
+}
+
+.btn:hover {
+  background-color: #333;
+}
+
+.contact-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #212121;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.contact-link:hover {
+  background-color: #212121;
+  color: #fff;
+}
